# rewst_remote_agent

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  MANIFEST.in  README.md  TODO.md  __version__.py  allcode.txt  architecture.md  compile_for_windows.py  compile_for_windows.sh  config.json  config_module.py  dummy.txt  pyproject.toml  pytest.ini  requirements.txt  rewst_agent.go  rewst_agent_config.md  rewst_agent_config.py  rewst_remote_agent.go  rewst_remote_agent.py  rewst_service_manager.py  rewst_windows_service.py  sample_download.ps1  service_manager.py  setup.py  sign_up.md  test.py  x.coveragerc
.github/templates/: rewst_remote_agent.spec  rewst_remote_agent.spec.template
.github/workflows/: Write-VersionFile.ps1  build-qa.yml  build-staging.yml  build.bat  build.old.yml  build.sh  build.yml  bump-version.yml  code-coverage.yml  coverage.yml  info.txt  python-tests.yml  qa.yml  release.yml  ssl_com_sign_binaries.ps1  staging.yml  tim-test.txt  unit-tests.yml
config_module/: __init__.py  config_io.py  fetch_config.py  host_info.py
configs/: config.json  sample_config.json
iot_hub_module/: authentication.py  connection_management.py  error_handling.py  logging_setup.py  message_handling.py
old_vers/: config_module.bak.py  rewst_remote_agent.py
scripts/: build_agent_config.ps1  build_and_patch_windows_service.ps1  ssl_com_sign_binaries.ps1  windows_version_file.py
service_module/: rewst_windows_service.py  service_management.py  signature_handling.py  verify_application_checksum.py  windows_service.py
tests/: __init__.py  test_rewst_agent_config.py  test_rewst_remote_agent.py  test_rewst_service_manager.py  test_rewst_windows_service.py
tests/config_module/: test_config_io.py  test_fetch_config.py  test_host_info.py
tests/iot_hub_module/: test_connection_management.py  test_error_handling.py
tests/service_module/: test_service_management.py  test_verify_application_checksum.py
