[project]
name = "rewst_remote_agent"
version = "0.7.3"
description = "An RMM-agnostic remote agent using the Azure IoT Hub"
authors = [
    {name = "tim-at-rewst", email = "tim@rewst.io"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "psutil (>=6.1.1,<7.0.0)",
    "platformdirs (>=4.3.6,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "azure-iot-device (>=2.14.0,<3.0.0)",
    "pywin32 (>=308,<309) ; sys_platform == \"win32\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-mock = "^3.14.0"
coverage-lcov = "^0.3.0"
pytest-cov = "^6.0.0"
pyinstaller = "^6.11.1"
commitizen = "^4.1.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
